fix alignment oops

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,7 +1,9 @@
 main ul {
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 main ul li {
